update routes and validation
