# src/utilities/users-validation.js
@@ -10,33 +10,41 @@ validate.usersRules = () => {
     // username is required and must be string
     body("username")
       .trim()
-      .escape()
       .notEmpty()
-      .withMessage('Username cannot be empty')
-      .isLength({ min: 2 })
-      .withMessage("Please provide a username."),
+      .withMessage("Username is required.")
+      .isLength({ min: 3, max: 20 })
+      .withMessage("Username must be 3-20 characters long.")
+      .matches(/^[a-zA-Z0-9_-]+$/)
+      .withMessage("Username can only contain letters, numbers, underscores, or dashes.")
+      .not()
+      .matches(/^[-_]/)
+      .withMessage("Username cannot start with a hyphen or underscore.")
+      .not()
+      .matches(/[-_]$/)
+      .withMessage("Username cannot end with a hyphen or underscore.")
+      .matches(/^\S+$/).withMessage("Username cannot contain spaces."),
 
     // password is required and must be string
     body("password")
       .trim()
       .escape()
       .notEmpty()
-      .withMessage('Password cannot be empty')
+      .withMessage("Password cannot be empty")
       .isStrongPassword({
         minLength: 12,
         minLowercase: 1,
         minUppercase: 1,
         minNumbers: 1,
         minSymbols: 1,
-    })
-    .withMessage('Password does not meet requirements.'),
+      })
+      .withMessage("Password does not meet requirements."),
 
     // firstName is required and must be string
     body("firstName")
       .trim()
       .escape()
       .notEmpty()
-      .withMessage('First Name cannot be empty')
+      .withMessage("First Name cannot be empty")
       .isLength({ min: 1 })
       .withMessage("Please provide a first name."),
 
@@ -45,7 +53,7 @@ validate.usersRules = () => {
       .trim()
       .escape()
       .notEmpty()
-      .withMessage('Last Name cannot be empty')
+      .withMessage("Last Name cannot be empty")
       .isLength({ min: 2 })
       .withMessage("Please provide a last name."),
 
@@ -54,7 +62,7 @@ validate.usersRules = () => {
       .trim()
       .escape()
       .notEmpty()
-      .withMessage('Email cannot be empty')
+      .withMessage("Email cannot be empty")
       .isEmail()
       .normalizeEmail() // refer to validator.js docs
       .withMessage("A valid email is required."),
@@ -62,14 +70,12 @@ validate.usersRules = () => {
     // valid phone number is required
     body("phoneNumber")
       .trim()
-      .escape()
       .notEmpty()
-      .withMessage('Phone number cannot be empty')
-      .isLength({ min: 10, max: 10 })
-      .withMessage("Please provide a valid phone number."),
+      .withMessage("Phone number cannot be empty")
+      .matches(/^\d{10}$/)
+      .withMessage("Please enter a valid 10-digit phone number (numbers only)."),
   ];
 };
-
 
 /* ******************************
  *  Check data and return errors or continue to update
