# swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "1.0.0",
+    "version": "1.1.0",
     "title": "Tools Collection Project API",
     "description": "Create an API that will allow users to interact with a collection of tools.",
     "contact": {
@@ -71,6 +71,12 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -106,16 +112,16 @@
         }
       }
     },
-    "/users/{id}": {
+    "/users/{username}": {
       "get": {
         "tags": [
           "Users"
         ],
-        "summary": "Get user by id",
-        "description": "Returns a user with specified id",
+        "summary": "Get user by username",
+        "description": "Returns a user with specified username",
         "parameters": [
           {
-            "name": "id",
+            "name": "username",
             "in": "path",
             "required": true,
             "schema": {
@@ -126,6 +132,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -139,11 +148,11 @@
         "tags": [
           "Users"
         ],
-        "summary": "Update a existing user by id",
-        "description": "Update a existing user in the database by id",
+        "summary": "Update a existing user by username",
+        "description": "Update a existing user in the database by username",
         "parameters": [
           {
-            "name": "id",
+            "name": "username",
             "in": "path",
             "required": true,
             "schema": {
@@ -155,8 +164,14 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "404": {
             "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -196,11 +211,11 @@
         "tags": [
           "Users"
         ],
-        "summary": "Delete a user by id",
-        "description": "Delete a user in the database by id",
+        "summary": "Delete a user by username",
+        "description": "Delete a user in the database by username",
         "parameters": [
           {
-            "name": "id",
+            "name": "username",
             "in": "path",
             "required": true,
             "schema": {
@@ -249,6 +264,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -345,6 +363,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -447,6 +468,9 @@
           "201": {
             "description": "Created"
           },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -542,6 +566,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
@@ -644,6 +671,9 @@
           "201": {
             "description": "Created"
           },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -727,6 +757,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
